<?xml version="1.0"?>
<package format="2">

  <name>wrench_marker</name>
  <version>0.0.0</version>
  <description>The wrench_marker package</description>

  <maintainer email="miguel.prada@tecnalia.com">mprada</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roscpp</depend>

  <export>
  </export>

</package>
