<?xml version="1.0"?>
<package format="2">

  <name>wrench_marker</name>
  <version>0.0.0</version>
  <description>The wrench_marker package</description>

  <maintainer email="miguel.prada@tecnalia.com">mprada</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <export>
  </export>

</package>
